=== What's new in 2.1 Since 2.0

==== Kafka Client Version

This version requires the 1.1.0 `kafka-clients` or higher.

==== Class/Package Changes

The class `ContainerProperties` has been moved from `org.springframework.kafka.listener.config` to `org.springframework.kafka.listener`.

The enum `AckMode` has been moved from `AbstractMessageListenerContainer` to `ContainerProperties`.

`setBatchErrorHandler()` and `setErrorHandler()` methods have been moved from `ContainterProperties` to `AbstractMessageListenerContainer` (and `AbstractKafkaListenerContainerFactory`).